manifests/jambonz/api-server/api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-server
  name: api-server
  namespace: jambonz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: api-server
          image: jambonz/api-server:0.8.5
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
