manifests/jambonz/api-server/api-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server
  namespace: jambonz
  annotations:
    konghq.com/use-regex: "true"
    konghq.com/preserve-host: "true"
    konghq.com/strip-path: "true"
    konghq.com/request-buffering: "true"
    konghq.com/response-buffering: "true"
    # konghq.com/connect-timeout: "6000"
    # konghq.com/read-timeout: "6000"
    # konghq.com/write-timeout: "6000"
    # konghq.com/rewrite-target: /$2
    #konghq.com/plugins: auth
spec:
  ingressClassName: kong
  rules:
    - host: cpaas-api.epacific.net
      http:
        paths:
        - backend:
            service:
              name: api-server
              port: 
                number: 3000
          path: /
          pathType: Prefix
